--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1 class="section_cover_letter_title">About</h1>
                 <p class="section_cover_letter_text">My name is Calin Gilan, I am currently a Software Engineer at Capital One. 
                     I have a Bachelors degree in Computer Science from Rutgers University. 
-                    Since a child, I’ve always had a strong interest in computers and art. 
+                    Since I was a child, I’ve always had a strong interest in computers and art. 
                     While the fundamentals of Computer Science are grounded in math, 
                     I believe that developing good software requires a healthy dose of creativity.
                 </p>
@@ -42,7 +42,7 @@
                     I have strong documentation skills, a willingness to help people my junior, 
                     and strong social skills. Outside work, 
                     I make sure I make sure to keep up with my personal hobbies that I enjoy outside software. 
-                    If you’re reading this looking for a candidate for hire, shoot me an email at cal13199@gmail.com. 
+                    If you’re reading this and are looking for a candidate for hire, shoot me an email at cal13199@gmail.com. 
                 </p>
             </section>
             <a name="contact"></a>
