--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         </nav> 
         <article class="main_article">
             <a name="home"></a>
-            <div class="name_title_box">
-                <h1 class="name_title">Calin Gilan</h1>
-                <h3 class="occupation_title"> Software Engineer</h3>
-                <h5 class="blurb_title">...and unashamed millenial houseplant enthusiast</h5>
+            <div class="home_flex">
             </div>
             <a name="about"></a>
             <section class="section_cover_letter">
