--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Calin Gilan | Software Engineer</title>
         <meta name="description" content="">
         <link rel="stylesheet" href="styles.css">
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav class="menu-nav">
