Removed extra space

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     I also realize that being a strong engineer means developing skills outside my discipline. 
                     I have strong documentation skills, a willingness to help people my junior, 
                     and strong social skills. Outside work, 
-                    I make sure I make sure to keep up with my personal hobbies that I enjoy outside software. 
+                    I make sure I make sure to keep up with my personal hobbies that I enjoy outside of software development. 
                     If you’re reading this and are looking for a candidate for hire, shoot me an email at cal13199@gmail.com. 
                 </p>
             </section>
