--- a/index.html
+++ b/index.html
@@ -2,46 +2,63 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap" rel="stylesheet"> 
         <title>Calin Gilan | Software Engineer</title>
         <meta name="description" content="">
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <nav class="menu-nav">
-            <ul class="menu-ul">
-                <li class="menu-li"><a class="menu-a" href="#home">Home</a></li>
-                <li class="menu-li"><a class="menu-a" href="#about">About</a></li>
-                <li class="menu-li"><a class="menu-a" href="#contact">Contact</a></li>
+        <nav class="menu_nav">
+            <ul class="menu_ul">
+                <li class="menu_li"><a class="menu_a" href="#home">HOME</a></li>
+                <li class="menu_li"><a class="menu_a" href="#about">EXPERIENCE</a></li>
+                <li class="menu_li"><a class="menu_a" href="#about">ABOUT</a></li>
+                <li class="menu_li"><a class="menu_a" href="#contact">CONTACT</a></li>
             </ul>
         </nav> 
         <article class="main_article">
+            <div class=space_no_border></div>
             <a name="home"></a>
             <div class="home_flex">
+                <div class="home_text">
+                    <div class="name">Hi, I'm Calin Gilan</div>
+                    <div class="sub_name">Backend Software Engineer with Full Stack Experience</div>
+                </div>
+                <div class=space></div>
+            </div>
+            <a name="experience"></a>
+            <div class=experience_flex>
+                <div class=experience_text>
+                    <section class=experience_title>Experience &#9</section>
+                    <div class=company_name>Capital One</div>
+                    <div class=company_date_location_box>
+                        <div class=company_location>Mclean, VA</div>
+                        <div class=company_date>Sept. 2018 - Present</div>
+                    </div>
+                    <div class=company_date_location_box>
+                            <div class=company_location>Richmond, VA</div>
+                            <div class=company_date>Sept. 2017 - Sept 2018</div>
+                    </div>
+                    <div class=company_name>iCIMS</div>
+                    <div class=company_date_location_box>
+                        <div class=company_location>Mclean, VA</div>
+                        <div class=company_date>Sept. 2018 - Present</div>
+                    </div>
+                </div>
+                <div class=space></div>
             </div>
             <a name="about"></a>
-            <section class="section_cover_letter">
-                <h1 class="section_cover_letter_title">About</h1>
-                <p class="section_cover_letter_text">My name is Calin Gilan, I am currently a Software Engineer at Capital One. 
-                    I have a Bachelors degree in Computer Science from Rutgers University. 
-                    Since I was a child, I’ve always had a strong interest in computers and art. 
-                    While the fundamentals of Computer Science are grounded in math, 
-                    I believe that developing good software requires a healthy dose of creativity.
-                </p>
-                <p class="section_cover_letter_text">
-                    My skills are Primarily in Java and Golang, as well as a strong base in C. 
-                    I believe in treating languages as a tool to achieve a goal or vision, 
-                    rather than something you have to label yourself with. Because of this, 
-                    I pride myself in having a fast ramp up time with new languages.
-                </p>
-                <p class="section_cover_letter_text">
-                    I also realize that being a strong engineer means developing skills outside my discipline. 
-                    I have strong documentation skills, a willingness to help people my junior, 
-                    and strong social skills. Outside work, 
-                    I make sure I make sure to keep up with my personal hobbies that I enjoy outside of software development. 
-                    If you’re reading this and are looking for a candidate for hire, shoot me an email at cal13199@gmail.com. 
-                </p>
-            </section>
+            <div class=education_flex>
+                <div class=education_text>
+                    <section class=education_title>Education &#9</section>
+                    <div class = education_university_date_box>
+                        <div class= university_name>Rutgers University</div>
+                        <div class=graduation_date>Graduated 2017</div>
+                    </div>
+                    <div class=degree_name>Bachelors in Computer Science</div>
+                </div>
+            </div>
             <a name="contact"></a>
             <section class="section_contact">
                 <h1 class="section_contact_title">Contact</h1>
