Background color separation

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
             </ul>
         </nav> 
         <article class="main_article">
-            <div class=space_no_border></div>
             <a name="home"></a>
             <div class="home_flex">
+                <div class=space_no_border></div>
                 <div class="home_text">
                     <div class="name">Hi, I'm Calin Gilan</div>
                     <div class="sub_name">Backend Software Engineer with Full Stack Experience</div>
                 </div>
-                <div class=space></div>
+                <div class=space_no_border></div>
             </div>
             <a name="experience"></a>
             <div class=experience_flex>
+                <div class=space_no_border></div>
                 <div class=experience_text>
                     <section class=experience_title>Experience &#9</section>
                     <div class=company_name>Capital One</div>
@@ -58,15 +59,18 @@
                     </div>
                     <div class=degree_name>Bachelors in Computer Science</div>
                 </div>
+                <div class=space></div>
             </div>
             <a name="contact"></a>
-            <section class="section_contact">
-                <h1 class="section_contact_title">Contact</h1>
-                <p>Email</p>
-                <a href="mailto:cal13199@gmail.com">cal13199@gmail.com</a>
-                <p>LinkedIn</p>
-                <a href="https://linkedin.com/in/calin-gilan/">linkedin.com/in/calin-gilan</a>
-            </section>
+            <div class="contact_flex">
+                <div class=contact_text>
+                    <h1 class="contact_title">Contact</h1>
+                    <p>Email</p>
+                    <a href="mailto:cal13199@gmail.com">cal13199@gmail.com</a>
+                    <p>LinkedIn</p>
+                    <a href="https://linkedin.com/in/calin-gilan/">linkedin.com/in/calin-gilan</a>
+                </div>
+            </div>
         </article>
     </body>
 </html>
