Changed info updated css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav class="menu_nav">
             <ul class="menu_ul">
                 <li class="menu_li"><a class="menu_a" href="#home">HOME</a></li>
-                <li class="menu_li"><a class="menu_a" href="#about">EXPERIENCE</a></li>
-                <li class="menu_li"><a class="menu_a" href="#about">ABOUT</a></li>
+                <li class="menu_li"><a class="menu_a" href="#experience">EXPERIENCE</a></li>
+                <li class="menu_li"><a class="menu_a" href="#education">EDUCATION</a></li>
                 <li class="menu_li"><a class="menu_a" href="#contact">CONTACT</a></li>
             </ul>
         </nav> 
@@ -39,17 +39,17 @@
                     </div>
                     <div class=company_date_location_box>
                             <div class=company_location>Richmond, VA</div>
-                            <div class=company_date>Sept. 2017 - Sept 2018</div>
+                            <div class=company_date>Sept. 2017 - Sept. 2018</div>
                     </div>
                     <div class=company_name>iCIMS</div>
                     <div class=company_date_location_box>
-                        <div class=company_location>Mclean, VA</div>
-                        <div class=company_date>Sept. 2018 - Present</div>
+                        <div class=company_location>Matawan, NJ</div>
+                        <div class=company_date>Sept. 2016 - Apr. 2016</div>
                     </div>
                 </div>
                 <div class=space></div>
             </div>
-            <a name="about"></a>
+            <a name="education"></a>
             <div class=education_flex>
                 <div class=education_text>
                     <section class=education_title>Education &#9</section>
@@ -70,6 +70,7 @@
                     <p>LinkedIn</p>
                     <a href="https://linkedin.com/in/calin-gilan/">linkedin.com/in/calin-gilan</a>
                 </div>
+                <div class=space_no_border></div>
             </div>
         </article>
     </body>
