--- a/index.html
+++ b/index.html
@@ -1,77 +1,81 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap" rel="stylesheet"> 
         <title>Calin Gilan | Software Engineer</title>
         <meta name="description" content="">
         <link rel="stylesheet" href="styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body>
-        <nav class="menu_nav">
-            <ul class="menu_ul">
-                <li class="menu_li"><a class="menu_a" href="#home">HOME</a></li>
-                <li class="menu_li"><a class="menu_a" href="#experience">EXPERIENCE</a></li>
-                <li class="menu_li"><a class="menu_a" href="#education">EDUCATION</a></li>
-                <li class="menu_li"><a class="menu_a" href="#contact">CONTACT</a></li>
-            </ul>
-        </nav> 
-        <article class="main_article">
-            <a name="home"></a>
-            <div class="home_flex">
-                <div class=space_no_border></div>
-                <div class="home_text">
-                    <div class="name">Hi, I'm Calin Gilan</div>
-                    <div class="sub_name">Backend Software Engineer with Full Stack Experience</div>
-                </div>
-                <div class=space_no_border></div>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
+            <div class="container">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Experience</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Education</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Contact</a>
+                  </li>
+              </ul>
             </div>
-            <a name="experience"></a>
-            <div class=experience_flex>
-                <div class=space_no_border></div>
-                <div class=experience_text>
-                    <section class=experience_title>Experience &#9</section>
-                    <div class=company_name>Capital One</div>
-                    <div class=company_date_location_box>
-                        <div class=company_location>Mclean, VA</div>
-                        <div class=company_date>Sept. 2018 - Present</div>
-                    </div>
-                    <div class=company_date_location_box>
-                            <div class=company_location>Richmond, VA</div>
-                            <div class=company_date>Sept. 2017 - Sept. 2018</div>
-                    </div>
-                    <div class=company_name>iCIMS</div>
-                    <div class=company_date_location_box>
-                        <div class=company_location>Matawan, NJ</div>
-                        <div class=company_date>Sept. 2016 - Apr. 2016</div>
-                    </div>
-                </div>
-                <div class=space></div>
+          </nav>
+          <div class="jumbotron bg-primary">
+            <div class="container text-white ">
+            <h1 class="display-4">Hi, I'm Calin Gilan</h1>
+            <p class="lead ">Full Stack Software Developer</p>
+            <hr class="my-4">
+            <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks as languages are merely tools to solve problems</p>
             </div>
-            <a name="education"></a>
-            <div class=education_flex>
-                <div class=education_text>
-                    <section class=education_title>Education &#9</section>
-                    <div class = education_university_date_box>
-                        <div class= university_name>Rutgers University</div>
-                        <div class=graduation_date>Graduated 2017</div>
+          </div>
+
+          <div class="container">
+            <div class="row">
+                <div class="col-xl-4">
+                    <ul class="list-group list-group-flush">
+                        <h3 class="display-5">Experience</h3>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
                     </div>
-                    <div class=degree_name>Bachelors in Computer Science</div>
-                </div>
-                <div class=space></div>
+                    <div class="col-xl-4">
+                    <ul class="list-group list-group-flush">
+                        <h3 class="display-5">Education</h3>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                    </div>
+                    <div class="col-xl-4">
+                        <ul class="list-group list-group-flush">
+                            <h3 class="display-5">About</h3>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                        </div>
             </div>
-            <a name="contact"></a>
-            <div class="contact_flex">
-                <div class=contact_text>
-                    <h1 class="contact_title">Contact</h1>
-                    <p>Email</p>
-                    <a href="mailto:cal13199@gmail.com">cal13199@gmail.com</a>
-                    <p>LinkedIn</p>
-                    <a href="https://linkedin.com/in/calin-gilan/">linkedin.com/in/calin-gilan</a>
-                </div>
-                <div class=space_no_border></div>
             </div>
-        </article>
+        </div>
+          <footer class="footer">
+            <div class="container">
+              <span class="text-muted"><script>document.write(new Date().getFullYear())</script>, Calin Gilan</span>
+            </div>
+          </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
 </html>
