Add additional image

--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
               </ul>
             </div>
           </nav>
-          <div class="jumbotron bg-primary">
+          <div class="jumbotron jumbotron-fluid bg-primary">
             <div class="container text-white ">
-            <h1 class="display-4">Hi, I'm Calin Gilan</h1>
-            <p class="lead ">Full Stack Software Developer</p>
-            <hr class="my-4">
-            <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks as languages are merely tools to solve problems</p>
+              <div class="row">
+                <div class="col-xl-6">
+                  <h1 class="display-4">Hi, I'm Calin Gilan</h1>
+                  <p class="lead ">Full Stack Software Developer</p>
+                </div>
+                <div class="col-xl-1">
+                  <img src="computer.png" class="rounded" style="width: 125px; height: 125px" alt="Responsive image">
+                </div>
+               
+            </div>
+              <hr class="my-4">
+              <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks as languages are merely tools to solve problems</p>
             </div>
           </div>
 
@@ -41,16 +49,14 @@
             <div class="row">
                 <div class="col-xl-4">
                     <ul class="list-group list-group-flush">
-                        <h3 class="display-5">Experience</h3>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
+                        <div class="container"><h3 class="display-5">Experience</h3> </div>
+                        <li class="list-group-item"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
+                        <li class="list-group-item"><div class="row"><div class="col-xl-4">Richmond, VA</div><div class="col-xl-8">Sept. 2017 - Sept. 2018</div></div></li>
                     </ul>
                     </div>
                     <div class="col-xl-4">
                     <ul class="list-group list-group-flush">
-                        <h3 class="display-5">Education</h3>
+                        <div class="container"><h3 class="display-5">Education</h3> </div>
                         <li class="list-group-item">Dapibus ac facilisis in</li>
                         <li class="list-group-item">Morbi leo risus</li>
                         <li class="list-group-item">Porta ac consectetur ac</li>
@@ -59,11 +65,9 @@
                     </div>
                     <div class="col-xl-4">
                         <ul class="list-group list-group-flush">
-                            <h3 class="display-5">About</h3>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
+                            <div class="container"><h3 class="display-5">About</h3> </div>
+                            <li class="list-group-item"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8">cal13199@gmail.com</div></div></li>
+                            <li class="list-group-item"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8">https://www.linkedin.com/in/calin-gilan/</div></div></li>
                         </ul>
                         </div>
             </div>
