Add proper information

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
-    <body>
+    <body bg-white>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
             <div class="container">
               <ul class="navbar-nav mr-auto">
@@ -30,18 +30,13 @@
           </nav>
           <div class="jumbotron jumbotron-fluid bg-primary">
             <div class="container text-white ">
-              <div class="row">
-                <div class="col-xl-6">
-                  <h1 class="display-4">Hi, I'm Calin Gilan</h1>
-                  <p class="lead ">Full Stack Software Developer</p>
-                </div>
-                <div class="col-xl-1">
-                  <img src="computer.png" class="rounded" style="width: 125px; height: 125px" alt="Responsive image">
-                </div>
-               
-            </div>
+              <h1 class="display-4">Hi, I'm Calin Gilan</h1>
+              <p class="lead ">Full Stack Software Developer</p>
               <hr class="my-4">
               <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks as languages are merely tools to solve problems</p>
+              <p class="lead">
+                <a id="contact_button" class="btn bg-white btn-md font-weight-bold p-2 mt-2" href="mailto:cal13199@gmail.com" role="button">&nbsp;&nbsp;Send Message →&nbsp;&nbsp;</a>
+              </p>
             </div>
           </div>
 
@@ -50,17 +45,18 @@
                 <div class="col-xl-4">
                     <ul class="list-group list-group-flush">
                         <div class="container"><h3 class="display-5">Experience</h3> </div>
+                        <li class="list-group-item"><h5 class="display-6">Capital One</h5></li>
                         <li class="list-group-item"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
                         <li class="list-group-item"><div class="row"><div class="col-xl-4">Richmond, VA</div><div class="col-xl-8">Sept. 2017 - Sept. 2018</div></div></li>
+                        <li class="list-group-item"><h5 class="display-6">iCIMS, inc</h5></li>
+                        <li class="list-group-item"><div class="row"><div class="col-xl-4">Matawan, NJ</div><div class="col-xl-8">Sept. 2016 - Aug. 2016</div></div></li>
                     </ul>
                     </div>
                     <div class="col-xl-4">
                     <ul class="list-group list-group-flush">
                         <div class="container"><h3 class="display-5">Education</h3> </div>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
+                        <li class="list-group-item"><h5 class="display-6">Rutgers University</h5></li>
+                        <li class="list-group-item">Bachelors in Computer Science</li>
                     </ul>
                     </div>
                     <div class="col-xl-4">
