Switched body to darkmode

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
-    <body bg-white>
+    <body class="bg-dark">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
             <div class="container">
               <ul class="navbar-nav mr-auto">
@@ -33,9 +33,9 @@
               <h1 class="display-4">Hi, I'm Calin Gilan</h1>
               <p class="lead ">Full Stack Software Developer</p>
               <hr class="my-4">
-              <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks as languages are merely tools to solve problems</p>
+              <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks</p>
               <p class="lead">
-                <a id="contact_button" class="btn bg-white btn-md font-weight-bold p-2 mt-2" href="mailto:cal13199@gmail.com" role="button">&nbsp;&nbsp;Send Message →&nbsp;&nbsp;</a>
+                <a id="contact_button" class="btn bg-white btn-md font-weight-bold p-2 mt-2" href="mailto:cal13199@gmail.com" role="button">&nbsp;&nbsp;Reach out →&nbsp;&nbsp;</a>
               </p>
             </div>
           </div>
@@ -43,27 +43,27 @@
           <div class="container">
             <div class="row">
                 <div class="col-xl-4">
-                    <ul class="list-group list-group-flush">
-                        <div class="container"><h3 class="display-5">Experience</h3> </div>
-                        <li class="list-group-item"><h5 class="display-6">Capital One</h5></li>
-                        <li class="list-group-item"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
-                        <li class="list-group-item"><div class="row"><div class="col-xl-4">Richmond, VA</div><div class="col-xl-8">Sept. 2017 - Sept. 2018</div></div></li>
-                        <li class="list-group-item"><h5 class="display-6">iCIMS, inc</h5></li>
-                        <li class="list-group-item"><div class="row"><div class="col-xl-4">Matawan, NJ</div><div class="col-xl-8">Sept. 2016 - Aug. 2016</div></div></li>
+                    <ul class="list-group list-group-flush text-white">
+                        <li class="list-group-item bg-dark"><h3 class="display-5">Experience</h3></li>
+                        <li class="list-group-item bg-dark"><h5 class="display-6">Capital One</h5></li>
+                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
+                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Richmond, VA</div><div class="col-xl-8">Sept. 2017 - Sept. 2018</div></div></li>
+                        <li class="list-group-item bg-dark"><h5 class="display-6">iCIMS, inc</h5></li>
+                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Matawan, NJ</div><div class="col-xl-8">Sept. 2016 - Aug. 2016</div></div></li>
                     </ul>
                     </div>
                     <div class="col-xl-4">
-                    <ul class="list-group list-group-flush">
-                        <div class="container"><h3 class="display-5">Education</h3> </div>
-                        <li class="list-group-item"><h5 class="display-6">Rutgers University</h5></li>
-                        <li class="list-group-item">Bachelors in Computer Science</li>
+                    <ul class="list-group list-group-flush text-white">
+                      <li class="list-group-item bg-dark"><h3 class="display-5">Education</h3></li>
+                      <li class="list-group-item bg-dark"><h5 class="display-6">Rutgers University</h5></li>
+                      <li class="list-group-item bg-dark">Bachelors in Computer Science</li>
                     </ul>
                     </div>
                     <div class="col-xl-4">
-                        <ul class="list-group list-group-flush">
-                            <div class="container"><h3 class="display-5">About</h3> </div>
-                            <li class="list-group-item"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8">cal13199@gmail.com</div></div></li>
-                            <li class="list-group-item"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8">https://www.linkedin.com/in/calin-gilan/</div></div></li>
+                        <ul class="list-group list-group-flush text-white">
+                          <li class="list-group-item bg-dark"><h3 class="display-5">About</h3></li>
+                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8">cal13199@gmail.com</div></div></li>
+                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8">https://www.linkedin.com/in/calin-gilan/</div></div></li>
                         </ul>
                         </div>
             </div>
@@ -71,7 +71,7 @@
         </div>
           <footer class="footer">
             <div class="container">
-              <span class="text-muted"><script>document.write(new Date().getFullYear())</script>, Calin Gilan</span>
+              <span class="text-muted">© <script>document.write(new Date().getFullYear())</script>, Calin Gilan</span>
             </div>
           </footer>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
