--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body class="bg-dark">
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <div class="container">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Home</a>
+                  <a class="nav-link text-white" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Experience</a>
+                    <a class="nav-link text-white" href="#experience">Experience</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Education</a>
+                    <a class="nav-link text-white" href="#education">Education</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Contact</a>
+                    <a class="nav-link text-white" href="#about">Contact</a>
                   </li>
               </ul>
             </div>
           </nav>
+          <a name="home"></a>
           <div class="jumbotron jumbotron-fluid bg-primary">
             <div class="container text-white ">
               <h1 class="display-4">Hi, I'm Calin Gilan</h1>
@@ -44,6 +45,7 @@
             <div class="row">
                 <div class="col-xl-4">
                     <ul class="list-group list-group-flush text-white">
+                        <a name="experience"></a>
                         <li class="list-group-item bg-dark"><h3 class="display-5">Experience</h3></li>
                         <li class="list-group-item bg-dark"><h5 class="display-6">Capital One</h5></li>
                         <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
@@ -54,6 +56,7 @@
                     </div>
                     <div class="col-xl-4">
                     <ul class="list-group list-group-flush text-white">
+                      <a name="education"></a>
                       <li class="list-group-item bg-dark"><h3 class="display-5">Education</h3></li>
                       <li class="list-group-item bg-dark"><h5 class="display-6">Rutgers University</h5></li>
                       <li class="list-group-item bg-dark">Bachelors in Computer Science</li>
@@ -61,6 +64,7 @@
                     </div>
                     <div class="col-xl-4">
                         <ul class="list-group list-group-flush text-white">
+                          <a name="about"></a>
                           <li class="list-group-item bg-dark"><h3 class="display-5">About</h3></li>
                             <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8">cal13199@gmail.com</div></div></li>
                             <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8">https://www.linkedin.com/in/calin-gilan/</div></div></li>
@@ -69,7 +73,7 @@
             </div>
             </div>
         </div>
-          <footer class="footer">
+          <footer class="footer bg-white">
             <div class="container">
               <span class="text-muted">© <script>document.write(new Date().getFullYear())</script>, Calin Gilan</span>
             </div>
