Modified spacing and coloring

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="row">
                 <div class="col-xl-4">
                     <ul class="list-group list-group-flush text-white">
+                      <li class="list-group-item bg-dark"><h3 class="display-5">Experience</h3></li>
                         <a name="experience"></a>
-                        <li class="list-group-item bg-dark"><h3 class="display-5">Experience</h3></li>
-                        <li class="list-group-item bg-dark"><h5 class="display-6">Capital One</h5></li>
+                        <li class="list-group-item bg-dark pt-4"><h5 class="display-6">Capital One</h5></li>
                         <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
                         <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Richmond, VA</div><div class="col-xl-8">Sept. 2017 - Sept. 2018</div></div></li>
                         <li class="list-group-item bg-dark"><h5 class="display-6">iCIMS, inc</h5></li>
@@ -56,17 +56,17 @@
                     </div>
                     <div class="col-xl-4">
                     <ul class="list-group list-group-flush text-white">
-                      <a name="education"></a>
                       <li class="list-group-item bg-dark"><h3 class="display-5">Education</h3></li>
-                      <li class="list-group-item bg-dark"><h5 class="display-6">Rutgers University</h5></li>
+                      <a name="education"></a>
+                      <li class="list-group-item bg-dark pt-4"><h5 class="display-6">Rutgers University</h5></li>
                       <li class="list-group-item bg-dark">Bachelors in Computer Science</li>
                     </ul>
                     </div>
                     <div class="col-xl-4">
                         <ul class="list-group list-group-flush text-white">
-                          <a name="about"></a>
                           <li class="list-group-item bg-dark"><h3 class="display-5">About</h3></li>
-                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8">cal13199@gmail.com</div></div></li>
+                          <a name="about"></a>
+                            <li class="list-group-item bg-dark pt-4"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8">cal13199@gmail.com</div></div></li>
                             <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8">https://www.linkedin.com/in/calin-gilan/</div></div></li>
                         </ul>
                         </div>
