--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </nav>
           <a name="home"></a>
           <div class="jumbotron jumbotron-fluid bg-primary">
-            <div class="container text-white ">
+            <div class="container text-white">
               <h1 class="display-4">Hi, I'm Calin Gilan</h1>
               <p class="lead ">Full Stack Software Developer</p>
               <hr class="my-4">
@@ -51,7 +51,7 @@
                         <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
                         <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Richmond, VA</div><div class="col-xl-8">Sept. 2017 - Sept. 2018</div></div></li>
                         <li class="list-group-item bg-dark"><h5 class="display-6">iCIMS, inc</h5></li>
-                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Matawan, NJ</div><div class="col-xl-8">Sept. 2016 - Aug. 2016</div></div></li>
+                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Matawan, NJ</div><div class="col-xl-8">June. 2016 - Aug. 2016</div></div></li>
                     </ul>
                     </div>
                     <div class="col-xl-4">
@@ -62,7 +62,7 @@
                       <li class="list-group-item bg-dark">Bachelors in Computer Science</li>
                     </ul>
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-xl-4 mb-4">
                         <ul class="list-group list-group-flush text-white">
                           <li class="list-group-item bg-dark"><h3 class="display-5">About</h3></li>
                           <a name="about"></a>
@@ -73,9 +73,9 @@
             </div>
             </div>
         </div>
-          <footer class="footer bg-white">
+          <footer  class="footer bg-dark">
             <div class="container">
-              <span class="text-muted">© <script>document.write(new Date().getFullYear())</script>, Calin Gilan</span>
+              <span class="text-white">© <script>document.write(new Date().getFullYear())</script>, Calin Gilan</span>
             </div>
           </footer>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
