Add selfie and correct spelling

--- a/index.html
+++ b/index.html
@@ -31,8 +31,15 @@
           <a name="home"></a>
           <div class="jumbotron jumbotron-fluid bg-primary">
             <div class="container text-white">
-              <h1 class="display-4">Hi, I'm Calin Gilan</h1>
-              <p class="lead ">Full Stack Software Developer</p>
+              <div class="row">
+                <div class="col-xl-6">
+                  <h1 class="display-4">Hi, I'm Calin Gilan</h1>
+                  <p class="lead ">Full Stack Software Developer</p>
+              </div>
+              <div class="col-xl-6">
+                <img src="me.jpg" alt="..." class="rounded-circle">
+              </div>
+            </div>
               <hr class="my-4">
               <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks</p>
               <p class="lead">
@@ -59,15 +66,15 @@
                       <li class="list-group-item bg-dark"><h3 class="display-5">Education</h3></li>
                       <a name="education"></a>
                       <li class="list-group-item bg-dark pt-4"><h5 class="display-6">Rutgers University</h5></li>
-                      <li class="list-group-item bg-dark">Bachelors in Computer Science</li>
+                      <li class="list-group-item bg-dark">Bachelor of Computer Science </li>
                     </ul>
                     </div>
                     <div class="col-xl-4 mb-4">
                         <ul class="list-group list-group-flush text-white">
                           <li class="list-group-item bg-dark"><h3 class="display-5">About</h3></li>
                           <a name="about"></a>
-                            <li class="list-group-item bg-dark pt-4"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8">cal13199@gmail.com</div></div></li>
-                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8">https://www.linkedin.com/in/calin-gilan/</div></div></li>
+                            <li class="list-group-item bg-dark pt-4"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8"><a href="mailto:cal13199@gmail.com">cal13199@gmail.com</a></div></div></li>
+                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8"><a href="https://www.linkedin.com/in/calin-gilan/">https://www.linkedin.com/in/calin-gilan/</a></div></div></li>
                         </ul>
                         </div>
             </div>
