--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
               <div class="row">
                 <div class="col-xl-6">
                   <h1 class="display-4">Hi, I'm Calin Gilan</h1>
-                  <p class="lead ">Full Stack Software Developer</p>
+                  <p class="lead">Full Stack Software Developer</p>
               </div>
               <div class="col-xl-6">
-                <img src="me.jpg" alt="..." class="rounded-circle">
+                <img src="me.jpg" alt="Calin Gilan" class="rounded-circle">
               </div>
             </div>
-              <hr class="my-4">
+              <hr class="my-4 bg-light">
               <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks</p>
               <p class="lead">
                 <a id="contact_button" class="btn bg-white btn-md font-weight-bold p-2 mt-2" href="mailto:cal13199@gmail.com" role="button">&nbsp;&nbsp;Reach out →&nbsp;&nbsp;</a>
